--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.0"
+    "express": "^4.15.0",
+    "moment": "^2.17.1"
   }
 }
